# tejk_it_izi

./: CMakeLists.txt  README.md  set_warning_level.cmake
server/controllers/: CMakeLists.txt
server/controllers/inc/: chat_controller.hpp
server/controllers/src/: chat_controller.cpp  friends_controller.cpp
server/controllers/ut/: CMakeLists.txt
server/database_facade/: CMakeLists.txt
server/database_facade/inc/: database_facade.hpp  postgresql_db.hpp  psql_facade.hpp
server/database_facade/src/: postgresql_db.cpp  psql_facade.cpp
server/database_facade/ut/: CMakeLists.txt  fake_database_facade.cpp  fake_database_facade.hpp
server/loginserver/: CMakeLists.txt
server/loginserver/inc/: client_session.hpp  gameserver.hpp  gameserver_session.hpp  login_protocol.hpp  loginserver.hpp  loginserver_data.hpp
server/loginserver/src/: client_session.cpp  gameserver_session.cpp  loginserver.cpp  main.cpp
server/mmocore/: CMakeLists.txt
server/mmocore/inc/: account_data.hpp  asynchronous_database_adapter.hpp  authenticator.hpp  chat_participant.hpp  chat_system.hpp  client_state.hpp  database_facade.hpp  friend_list.hpp  friend_system.hpp  friendlist_backend.hpp  friends_controller.hpp  ingame_state.hpp  ingame_state_protocol.hpp  ingame_state_recv_packet_factory.hpp  lobby_state.hpp  lobby_state_protocol.hpp  lobby_state_recv_packet_factory.hpp  login_validator.hpp  mmoclient.hpp  null_received_packet.hpp  null_state.hpp  postgresql_db.hpp  preauth_state.hpp  preauth_state_protocol.hpp  psql_facade.hpp  received_packet.hpp  state_transitioner.hpp  task_scheduler.hpp  tii_entity_representative.hpp  user_environment.hpp  world.hpp  world_registrar.hpp
server/mmocore/inc/c2s/: friend_add.hpp  friend_remove.hpp  join_chat.hpp  leave_chat.hpp  log_off_to_lobby.hpp  request_character_create.hpp  request_character_delete.hpp  request_character_select.hpp  request_lobby_log_off.hpp  send_chat_msg.hpp  send_whisper.hpp
server/mmocore/inc/chat_system/: chat_backend.hpp  chat_controller.hpp  chat_system.hpp  chatroom.hpp  default_chat_backend.hpp
server/mmocore/inc/friend_system/: default_friend_backend.hpp  friend_backend.hpp  friend_controller.hpp  friend_system.hpp  pending_friend_requests.hpp  single_friend_request.hpp
server/mmocore/inc/s2c/: broken_friendship.hpp  character_created.hpp  character_creation_fail.hpp  character_list.hpp  character_selected.hpp  chat_msg.hpp  friend_add_fail.hpp  friend_add_result.hpp  friend_online_while_you_login.hpp  moved_to_lobby.hpp  new_friendship.hpp  user_joined_chat.hpp  user_left_chat.hpp  whisper_message.hpp
server/mmocore/src/: chat_controller.cpp  friendlist_backend.cpp  ingame_state.cpp  ingame_state_recv_packet_factory.cpp  lobby_state.cpp  lobby_state_recv_packet_factory.cpp  mmoclient.cpp  null_received_packet.cpp  preauth_state.cpp  tii_entity_representative.cpp  world.cpp
server/mmocore/src/c2s/: friend_add.cpp  friend_remove.cpp  join_chat.cpp  leave_chat.cpp  log_off_to_lobby.cpp  request_character_create.cpp  request_character_delete.cpp  request_character_select.cpp  request_lobby_log_off.cpp  send_chat_msg.cpp  send_whisper.cpp
server/mmocore/src/chat_system/: chat_controller.cpp  chat_system.cpp  default_chat_backend.cpp
server/mmocore/src/friend_system/: default_friend_backend.cpp  friend_controller.cpp  friend_system.cpp  pending_friend_requests.cpp
server/mmocore/src/s2c/: broken_friendship.cpp  character_created.cpp  character_creation_fail.cpp  character_list.cpp  character_selected.cpp  chat_msg.cpp  friend_add_fail.cpp  friend_add_result.cpp  friend_leave.cpp  friend_login.cpp  friend_online_while_you_login.cpp  friend_removal_fail.cpp  friendship_request.cpp  moved_to_lobby.cpp  new_friendship.cpp  user_joined_chat.cpp  user_left_chat.cpp  whisper_message.cpp
server/mmocore/ut/: CMakeLists.txt  fake_database_facade.cpp  fake_database_facade.hpp  fake_user_environment.cpp  fake_user_environment.hpp  join_chat_tests.cpp  leave_chat_tests.cpp  log_off_to_lobby_tests.cpp  request_character_create_tests.cpp  request_character_delete_tests.cpp  request_character_select_tests.cpp  request_lobby_log_off_tests.cpp  send_chat_msg_tests.cpp
server/model/: CMakeLists.txt
server/model/inc/: lobby_character.hpp
server/net_core/: CMakeLists.txt
server/net_core/inc/: boost_acceptor.hpp  boost_socket.hpp  client_acceptor.hpp  net_session.hpp  net_socket.hpp  null_socket.hpp
server/net_core/src/: boost_acceptor.cpp  boost_socket.cpp  net_session.cpp
server/net_core/ut/: CMakeLists.txt  fake_client_acceptor.cpp  fake_client_acceptor.hpp  fake_net_session.cpp  fake_net_session.hpp  fake_net_socket.cpp  fake_net_socket.hpp
server/protocol/: CMakeLists.txt
server/protocol/inc/: friend_system_error_codes.hpp  ingame_state_protocol.hpp  ingame_state_recv_packet_factory.hpp  null_received_packet.hpp  preauth_state_protocol.hpp  received_packet.hpp
server/protocol/inc/c2s/: friend_add.hpp  friend_remove.hpp  (+4 more)
server/protocol/src/: ingame_state_recv_packet_factory.cpp  lobby_state_recv_packet_factory.cpp
server/protocol/ut/: CMakeLists.txt  join_chat_tests.cpp  leave_chat_tests.cpp  log_off_to_lobby_tests.cpp  request_character_delete_tests.cpp  request_character_select_tests.cpp  send_chat_msg_tests.cpp
server/tejk_it_izi/: CMakeLists.txt
server/tejk_it_izi/inc/: tejk_it_izi.hpp
server/tejk_it_izi/src/: main.cpp  tejk_it_izi.cpp
server/utils/: CMakeLists.txt
server/utils/inc/: binary_deserializer.hpp  binary_serializer.hpp  console_logger.hpp  logger.hpp
server/utils/src/: console_logger.cpp
server/utils/ut/: CMakeLists.txt  binary_deserializer_tests.cpp  binary_serializer_tests.cpp  fake_logger.cpp  fake_logger.hpp
server/world/: CMakeLists.txt
server/world/inc/: chat_system.hpp  friend_system.hpp  playable_character.hpp  tii_player_character.hpp  user_environment.hpp  world.hpp  world_registrar.hpp
server/world/src/: chat_participant.cpp  friendlist_backend.cpp  tii_player_character.cpp
server/world/ut/: CMakeLists.txt  fake_user_environment.cpp  fake_user_environment.hpp
(+31 files in other folders)
